Release Notes

* 6/15/2015
  * extened workQueue to allow site as a param
  * using always closed state for containers

* 6/11/2015
  * added tgtNumEventsPerJob
  * improved performance of file lookup

* 6/10/2015
  * adding offset in walltime estimation with HS06
  * kick ready tasks when some datasets have toupdate
  * set ready to toupdate datasets when nUnprocessed>0

* 6/8/2015
  * using force kill for finish/reassignTasks
  * changed PP to kick child tasks when parents are done
  * improved AtlasPJB to take ES into account
  * improved AtlasPJB to take network connectivity into account
  * changed to propagate exhausted to superStatus
  * added runUntilClosed
  * added support for walltimeUnit=HS06
  * changed JG to keep attemptNr when using a list of LFNs

6/3/2015
  * changed AtlasJobBrokers to take throttled jobs into account

* 5/27/2015
  * changed PP to set failed when nFiles=0 is finished
  * added ipConnectivity
  * set amount in getTaskParamsWithID_JEDI

* 5/20/2015
  * changed to allow a list of sites in task.site
  * added useCompleteOny to getAvailableFiles

* 5/18/2015
  * unset maxSize in InputChunk when nFilesPerJob or nEventsPerJob is set

* 5/13/2015
  * changed getAtom to take nEventsPerJob into account

* 5/12/2015
  * changed getJobsToBeProcessed for merge jobs to ignore maxJobs

* 5/11/2015
  * added useRealNumEvents
  * added exhausted

* 5/6/2015
  * changed JG to refresh job statistics before the innermost loop
  * fixed getTasksTobeProcessed to take maxJobs into account more precisely

* 5/5/2015
  * introduced maxFailure
  * using list_dataset_replicas of rucio API

* 4/27/2015
  * added restartTasksForContentsUpdate

* 4/26/2015
  * diabled to set ramCount using scouts
  * added debug messages to getTasksToBeFinished and prepareTasksToBeFinished

* 4/2/2015
  * introduced negative walltime to disable lopping job detection

* 3/29/2015
  * changed AtlasTS to set metadata to prod datasets
  * modified to prepareTasks